# G4MC

./: #CmakeLists.Txt#  .gitignore  CMakeLists.txt  G2P_G4Sim_Log.txt  G4MC.cc  G4MC.cc~  GNUmakefile  HRS_Nt_stucture.txt  History.txt  README.md  forrules.gmk  geant4_9.4_centos6.2.csh  geant4_9.4_centos6.2.csh~  geant4_9.6_centos6.2.csh  geant4_9.6_centos6.2.csh~  jx_geant4_9.4_centos6.2.csh  large_files.txt
CREX_Project/: #prex_septumfield.dat#  BField_BoNuS.ini  BField_Helm.ini  BField_Helm_R0.0.ini  BField_Helm_R0.5.ini  BField_Helm_R1.0.ini  BField_Helm_UVA.ini  BField_Septum.ini  BField_Septum.ini.svn  BField_Septum.ini~  BField_Tosca_FZ.ini  Detector.ini  Detector.ini~  Detector_CREX.ini  Detector_CREX.ini~  Detector_LAC.ini  FortranLib.vcproj  HRSMC.vcproj  HRSTransport.vcproj  HRSUsage.ini  HRSUsage.ini~  QtGui.vcproj  XS.vcproj  _G4Sim_Log.txt  beam.mac  beam.mac~  compare_septa.C  compare_septa.C~  crazy.C  crazy.C~  geant4_9.6_centos6.2.csh  generate_prex_septum_septumfield.pl  generate_prex_septum_septumfield.pl.save  generate_uni_hallbfield  generate_uni_hallbfield.C  generate_uni_hallbfield.C~  generate_uni_septumfield  generate_uni_septumfield.C  generate_uni_septumfield.C~  geometry.mac  (+13 more)
CREX_Project/correlations/: project.C  project.C~
CREX_Project/plotscripts/: transport.C  transport.C~
HRSTransport/: HRSTransBase.cc  HRSTransBase.hh  HRSTransport.cc  HRSTransport.cc~  HRSTransport.hh  Makefile
HRSTransport/G2PTrans400016/: Bwd_l5p65_400016.cc  Fwd_l5p65_400016.cc  G2PTrans400016.cc  G2PTrans400016.hh
HRSTransport/G2PTrans484816/: G2PTrans484816.cc  G2PTrans484816.hh
HRSTransport/G2PTrans484816R00/: Bwd_l5p77_484816R00.cc  Fwd_l5p77_484816R00.cc  G2PTrans484816R00.cc  G2PTrans484816R00.hh
HRSTransport/GDHTransLargeX0/: GDHTransLargeX0.cc  GDHTransLargeX0.hh
HRSTransport/GDHTransSTD/: GDHTransSTD.cc  GDHTransSTD.hh
HRSTransport/HRSTransSTD/: HRSTransSTD.cc
HRSTransport/hamcPREXTrans/: hamcPREXTrans.cc  hamcPREXTrans.hh  prex_forward.h  prex_forward_tuneX.f  test  test.C
HRSTransport/obj.x86_64/: HRSTransBase.d  HRSTransport.d  libHRSTransport.a.1.3.1
VC9_Projec/: BField_DVCS.ini  BField_Helm_SANE.ini  BField_Helm_SANE_Fit.ini  BField_SBS.ini  BField_Septum.ini  BField_Septum_484816.ini  Detector.ini  Detector.ini.svn  Detector.ini~  Detector_BigBite.ini  Detector_BoNuS.ini  Detector_CREX.ini  Detector_CREX.ini~  Detector_G2P.ini  Detector_G2P_C12.ini  Detector_G2P_NH3.ini  Detector_HMS.ini  Detector_RTPC.ini  Detector_RTPC_40cm_UVASolenoid.ini  Detector_SBS.ini  G2P_G4Sim_Log.txt  HRS6E2.2_BdL.mac  HRSMC.vcproj  HRSUsage.ini  HRSUsage.ini.lab  HRSUsage.ini.svn  _G4Sim_Log.txt  geometry.mac  gui.mac  gui.mac~  gui_qt_rtpc.mac  test.root  vis.mac  vis_win32.mac
XSModel/: mklibwin32.bat
XSModel/Elas/: ElasModel.cc  ElasModel.hh  gauss_legendre.cc
XSModel/obj.x86_64/: libXSModel.a.1.5.0
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: BField_Quad.hh  BField_SBS.hh  BField_Tosca.hh  BigBiteDetectorConstruction.hh  BigBiteEventAction.hh  BigBiteHit.hh  BigBiteMagField.hh  BoNuSDetectorConstruction.hh  CREXDetectorConstruction.hh  G2PDetectorConstruction.hh  HMSDetectorConstruction.hh  HRSDetectorConstruction.hh  HRSEMField.hh  HRSEMFieldSetup.hh  HRSEMFieldSetupMessenger.hh  HRSEventAction.hh  HRSEventActionMessenger.hh  HRSMaterial.hh  HRSMaterial.hh~  HRSNtReader.hh  HRSPrimaryGeneratorAction.hh  HRSPrimaryGeneratorAction.hh~  HRSPrimaryGeneratorMessenger.hh  HRSRootTree.hh  HRSRootTree.hh~  HRSSteppingAction.hh  HRSSteppingActionMessenger.hh  HRSTransform_TCSNHCS.hh  HRSUIExecutive.hh  HRSVisAttribute.hh  LACDetectorConstruction.hh  PhysicsList.hh  QuadFringe.hh  RTPCDetectorConstruction.hh  SBSDetectorConstruction.hh  T_DetectorConstruction.hh  UsageManager.hh
macros/: AnaWACS.cc  AnaWACS_cc.d  BB72HRS12.5_PEElas.mac  BBShield.C  BBShield.mac  BBShieldFromDump.mac  BBShield_bg.mac  BBShield_tg.mac  BFieldRatio.C  CheckBeamDumpWindow.C  CheckBeamDumpWindow_Cut0.C  CheckBeamDumpWindow_Cut1.C  CheckBeamShift.C  CheckBeamShift_cm.C  CheckRec.C  DetPhotonAngle.C  DoPlotMapping.C  DrawCoil.C  Edep.C  ElasE.C  GetTH2Area.cc  GetThirdArmEff.C  GetXS.C  HRS12.5E1.1.mac  HRS12.5E1.1TCS.mac  HRS12.5E1.1TCS_EPElas.mac  HRS12.5E1.6.mac  HRS12.5E1.6TCS.mac  HRS12.5E2.2.mac  HRS12.5E2.2TCS.mac  HRS12.5E3.3.mac  HRS12.5E3.3TCS.mac  HRS12.5EAllTCS.mac  HRS12.5EAllTCS_BothArm.mac  HRS12.5EAllTCS_EPElas.mac  HRS12.5GEPEAllTCS.mac  HRS4E1.7TCS.mac  HRS6AllE_BdL.mac  HRS6BdL.mac  HRS6E0.4TCS.mac  (+110 more)
macros/optics/: HRS12.5E1.1TCS.mac  HRS12.5E1.1TCS_R0.5.mac  HRS12.5E1.1TCS_R0.5_EndCap.mac  HRS12.5E1.1TCS_R0.5_XY.mac  HRS12.5E1.6TCS.mac  HRS12.5E2.2TCS.mac  HRS12.5E3.3TCS.mac  HRS12.5GEPE1.1TCS_R0.5.mac  HRS12.5GEPE1.1TCS_R0.5_EndCap.mac  HRS12.5GEPE1.1TCS_R0.5_XY.mac  HRS12.5TCS_R0.0.mac  HRS6E1.1TCS.mac  HRS6E1.1TCS_R0.5.mac  HRS6E1.1TCS_R0.5_EndCap.mac  HRS6E1.1TCS_R0.5_XY.mac  HRS6E1.6TCS.mac  HRS6E1.6TCS_R0.5.mac  HRS6E2.2TCS.mac  HRS6E2.2TCS_R0.5.mac  HRS6E3.3TCS.mac  HRS6E3.3TCS_R0.5.mac  HRS6GEPE1.1.mac  HRS6GEPE1.1TCS.mac  HRS6GEPE1.6.mac  HRS6GEPE1.6TCS.mac  HRS6GEPE1.6TCS_R0.5.mac  HRS6GEPE2.2.mac  HRS6GEPE2.2TCS.mac  HRS6GEPE2.2TCS_R0.5.mac  (+23 more)
minimize/: beam.mac  fit.C
src/: #HRSRootTree.cc#  BField_Dipole_Fringe.cc  BField_Helm.cc  BField_Quad.cc  BField_SBS.cc  BField_Septum.cc  BField_Septum.cc~  BField_Tosca.cc  BigBiteDetectorConstruction.cc  BigBiteEventAction.cc  BigBiteHit.cc  BigBiteMagField.cc  BoNuSDetectorConstruction.cc  CREXDetectorConstruction.cc  CREXDetectorConstruction.cc~  ConfigManager.cc  ElectroNuclearPhysics.cc  G2PDetectorConstruction.cc  G2P_G4Sim_Log.txt  HMSDetectorConstruction.cc  HMSDetectorConstruction.cc~  HRSBeamTarget.cc  HRSCalorimeterHit.cc  HRSCalorimeterSD.cc  HRSDCHit.cc  HRSDCSD.cc  HRSDetectorConstruction.cc  HRSDetectorConstruction.cc~  HRSEMField.cc  HRSEMFieldSetup.cc  HRSEMFieldSetupMessenger.cc  HRSEMPhysics.cc  HRSEventAction.cc  HRSEventAction.cc~  HRSEventActionMessenger.cc  HRSFZMagField.cc  HRSGeneralPhysics.cc  HRSGlobal.cc  HRSHadronPhysics.cc  HRSIonPhysics.cc  (+39 more)
(+28 files in other folders)
